--- a/Dockerfiles/Dockerfile2
+++ b/Dockerfiles/Dockerfile2
@@ -1,1 +1,7 @@
+FROM node:10
+WORKDIR /usr/src/app
+COPY . /usr/src/app
+ENV MONGO_INITDB_ROOT_USERNAME=mongo
+ENV MONGO_INITDB_ROOT_PASSWORD=password 
+ENV MONGO_INITDB_ROOT_HOSTNAME=mongodb 
 
