--- a/secret.yml
+++ b/secret.yml
@@ -1,3 +1,6 @@
+# This must be created first before any deployments in 
+# which this secret is referenced can be created
+
 apiVersion: v1
 kind: Secret
 metadata:
