--- a/secret.yml
+++ b/secret.yml
@@ -8,5 +8,5 @@ metadata:
   namespace: default
 type: Opaque
 data:
-   mongo_root_username: dXNlcm5hbWU=
-   mongo_root_password: cGFzc3dvcmQ=
+   mongo_root_username: dXNlcm5hbWU=   # these are generated using base64
+   mongo_root_password: cGFzc3dvcmQ=   # echo -n 'xxxxxxxx' | base64
