--- a/kubernetes-dcoker-install/Vagrantfile
+++ b/kubernetes-dcoker-install/Vagrantfile
@@ -1,3 +1,8 @@
+# Vagrant is a tool for building and managing virtual machine environments in a single workflow. 
+# With an easy-to-use workflow and focus on automation, 
+# Vagrant lowers development environment setup time, increases production parity, 
+# and makes the "works on my machine" excuse a relic of the past.
+
 IMAGE_NAME = "bento/ubuntu-16.04"
 N = 2
 
